src/objdetect/objdetect.h

// HOGDescriptor
// struct for detection region of interest (ROI)
// typedef struct DetectionROI {
//   VecDouble confidences;
//   VecPoint  locations;
//   double    scale;
// } DetectionROI;
CvStatus HOGDescriptor_New(HOGDescriptor *rval);
CvStatus HOGDescriptor_NewFromFile(char *filename, HOGDescriptor *rval);
CvStatus HOGDescriptor_Load(HOGDescriptor self, char *name, bool *rval);
CvStatus HOGDescriptor_DetectMultiScale(HOGDescriptor self, Mat img, VecRect *rval);
CvStatus HOGDescriptor_DetectMultiScaleWithParams(HOGDescriptor self, Mat img, double hitThresh,
                                                  Size winStride, Size padding, double scale,
                                                  double finalThreshold, bool useMeanshiftGrouping,
                                                  VecRect *rval);
CvStatus HOGDescriptor_SetSVMDetector(HOGDescriptor self, VecFloat det);
CvStatus HOGDescriptor_computeGradient(HOGDescriptor self, Mat img, Mat grad, Mat angleOfs, Size paddingTL,
                                       Size paddingBR);
// CvStatus HOGDescriptor_detectMultiScaleROI(HOGDescriptor self, Mat img, VecRect *foundLocations,
//                                            DetectionROI *locations, int *lenLocations, double hitThreshold,
//                                            int groupThreshold);
// CvStatus HOGDescriptor_detectROI(HOGDescriptor self, Mat img, VecPoint *locations, VecPoint
// *foundLocations,
//                                  VecDouble *confidences, double hitThreshold, Size winStride, Size
//                                  padding);
CvStatus HOGDescriptor_getDaimlerPeopleDetector(VecFloat *rval);