packages/dartcv/lib/src/g/objdetect.g.dart


  late final _HOGDescriptor_Detect2_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(HOGDescriptor, Mat, ffi.Double, CvSize,
              CvSize, imp1.CvCallback_2)>>('HOGDescriptor_Detect2_Async');
  late final _HOGDescriptor_Detect2_Async =
      _HOGDescriptor_Detect2_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              HOGDescriptor, Mat, double, CvSize, CvSize, imp1.CvCallback_2)>();

  ffi.Pointer<CvStatus> HOGDescriptor_DetectMultiScale(
    HOGDescriptor self,
    Mat img,
    ffi.Pointer<VecRect> rval,
  ) {
    return _HOGDescriptor_DetectMultiScale(
      self,
      img,
      rval,
    );
  }

  late final _HOGDescriptor_DetectMultiScalePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(HOGDescriptor, Mat,
              ffi.Pointer<VecRect>)>>('HOGDescriptor_DetectMultiScale');
  late final _HOGDescriptor_DetectMultiScale =
      _HOGDescriptor_DetectMultiScalePtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              HOGDescriptor, Mat, ffi.Pointer<VecRect>)>();

  ffi.Pointer<CvStatus> HOGDescriptor_DetectMultiScaleWithParams(
    HOGDescriptor self,
    Mat img,
    double hitThresh,
    CvSize winStride,
    CvSize padding,
    double scale,
    double finalThreshold,
    bool useMeanshiftGrouping,
    ffi.Pointer<VecRect> rval,
  ) {
    return _HOGDescriptor_DetectMultiScaleWithParams(
      self,
      img,
      hitThresh,
      winStride,
      padding,
      scale,
      finalThreshold,
      useMeanshiftGrouping,
      rval,
    );
  }

  late final _HOGDescriptor_DetectMultiScaleWithParamsPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<CvStatus> Function(
                  HOGDescriptor,
                  Mat,
                  ffi.Double,
                  CvSize,
                  CvSize,
                  ffi.Double,
                  ffi.Double,
                  ffi.Bool,
                  ffi.Pointer<VecRect>)>>(
      'HOGDescriptor_DetectMultiScaleWithParams');
  late final _HOGDescriptor_DetectMultiScaleWithParams =
      _HOGDescriptor_DetectMultiScaleWithParamsPtr.asFunction<
          ffi.Pointer<CvStatus> Function(HOGDescriptor, Mat, double, CvSize,
              CvSize, double, double, bool, ffi.Pointer<VecRect>)>();

  ffi.Pointer<CvStatus> HOGDescriptor_DetectMultiScaleWithParams_Async(
    HOGDescriptor self,
    Mat img,
    double hitThresh,
    CvSize winStride,
    CvSize padding,
    double scale,
    double finalThreshold,
    bool useMeanshiftGrouping,
    imp1.CvCallback_1 callback,
  ) {
    return _HOGDescriptor_DetectMultiScaleWithParams_Async(
      self,
      img,
      hitThresh,
      winStride,
      padding,
      scale,
      finalThreshold,
      useMeanshiftGrouping,
      callback,
    );
  }

  late final _HOGDescriptor_DetectMultiScaleWithParams_AsyncPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<CvStatus> Function(
                  HOGDescriptor,
                  Mat,
                  ffi.Double,
                  CvSize,
                  CvSize,
                  ffi.Double,
                  ffi.Double,
                  ffi.Bool,
                  imp1.CvCallback_1)>>(
      'HOGDescriptor_DetectMultiScaleWithParams_Async');
  late final _HOGDescriptor_DetectMultiScaleWithParams_Async =
      _HOGDescriptor_DetectMultiScaleWithParams_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(HOGDescriptor, Mat, double, CvSize,
              CvSize, double, double, bool, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> HOGDescriptor_DetectMultiScale_Async(
    HOGDescriptor self,
    Mat img,
    imp1.CvCallback_1 callback,
  ) {
    return _HOGDescriptor_DetectMultiScale_Async(
      self,
      img,
      callback,
    );
  }

  late final _HOGDescriptor_DetectMultiScale_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(HOGDescriptor, Mat,
              imp1.CvCallback_1)>>('HOGDescriptor_DetectMultiScale_Async');
  late final _HOGDescriptor_DetectMultiScale_Async =
      _HOGDescriptor_DetectMultiScale_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              HOGDescriptor, Mat, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> HOGDescriptor_Detect_Async(
    HOGDescriptor self,
    Mat img,
    double hitThresh,
    CvSize winStride,
    CvSize padding,
    imp1.CvCallback_3 callback,
  ) {
    return _HOGDescriptor_Detect_Async(
      self,
      img,
      hitThresh,
      winStride,
      padding,
      callback,
    );
  }

  late final _HOGDescriptor_Detect_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(HOGDescriptor, Mat, ffi.Double, CvSize,
              CvSize, imp1.CvCallback_3)>>('HOGDescriptor_Detect_Async');
  late final _HOGDescriptor_Detect_Async =
      _HOGDescriptor_Detect_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              HOGDescriptor, Mat, double, CvSize, CvSize, imp1.CvCallback_3)>();

  ffi.Pointer<CvStatus> HOGDescriptor_Load(
    HOGDescriptor self,
    ffi.Pointer<ffi.Char> name,
    ffi.Pointer<ffi.Bool> rval,
  ) {
    return _HOGDescriptor_Load(
      self,
      name,
      rval,
    );
  }

  late final _HOGDescriptor_LoadPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(HOGDescriptor, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Bool>)>>('HOGDescriptor_Load');
  late final _HOGDescriptor_Load = _HOGDescriptor_LoadPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          HOGDescriptor, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Bool>)>();

  ffi.Pointer<CvStatus> HOGDescriptor_Load_Async(
    HOGDescriptor self,
    ffi.Pointer<ffi.Char> name,
    imp1.CvCallback_1 callback,
  ) {
    return _HOGDescriptor_Load_Async(
      self,
      name,
      callback,
    );
  }

  late final _HOGDescriptor_Load_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(HOGDescriptor, ffi.Pointer<ffi.Char>,
              imp1.CvCallback_1)>>('HOGDescriptor_Load_Async');
  late final _HOGDescriptor_Load_Async =
      _HOGDescriptor_Load_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              HOGDescriptor, ffi.Pointer<ffi.Char>, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> HOGDescriptor_New(
    ffi.Pointer<HOGDescriptor> rval,
  ) {
    return _HOGDescriptor_New(
      rval,
    );
  }

  late final _HOGDescriptor_NewPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Pointer<HOGDescriptor>)>>('HOGDescriptor_New');
  late final _HOGDescriptor_New = _HOGDescriptor_NewPtr.asFunction<
      ffi.Pointer<CvStatus> Function(ffi.Pointer<HOGDescriptor>)>();

  ffi.Pointer<CvStatus> HOGDescriptor_NewFromFile(
    ffi.Pointer<ffi.Char> filename,
    ffi.Pointer<HOGDescriptor> rval,
  ) {
    return _HOGDescriptor_NewFromFile(
      filename,
      rval,
    );
  }

  late final _HOGDescriptor_NewFromFilePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<HOGDescriptor>)>>('HOGDescriptor_NewFromFile');
  late final _HOGDescriptor_NewFromFile =
      _HOGDescriptor_NewFromFilePtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<HOGDescriptor>)>();

  ffi.Pointer<CvStatus> HOGDescriptor_NewFromFile_Async(
    ffi.Pointer<ffi.Char> filename,
    imp1.CvCallback_1 callback,
  ) {
    return _HOGDescriptor_NewFromFile_Async(
      filename,
      callback,
    );
  }

  late final _HOGDescriptor_NewFromFile_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(ffi.Pointer<ffi.Char>,
              imp1.CvCallback_1)>>('HOGDescriptor_NewFromFile_Async');
  late final _HOGDescriptor_NewFromFile_Async =
      _HOGDescriptor_NewFromFile_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Pointer<ffi.Char>, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> HOGDescriptor_New_Async(
    imp1.CvCallback_1 callback,
  ) {
    return _HOGDescriptor_New_Async(
      callback,
    );
  }

  late final _HOGDescriptor_New_AsyncPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>>(
      'HOGDescriptor_New_Async');
  late final _HOGDescriptor_New_Async = _HOGDescriptor_New_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> HOGDescriptor_SetSVMDetector(
    HOGDescriptor self,
    VecF32 det,
  ) {
    return _HOGDescriptor_SetSVMDetector(
      self,
      det,
    );
  }

  late final _HOGDescriptor_SetSVMDetectorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              HOGDescriptor, VecF32)>>('HOGDescriptor_SetSVMDetector');
  late final _HOGDescriptor_SetSVMDetector = _HOGDescriptor_SetSVMDetectorPtr
      .asFunction<ffi.Pointer<CvStatus> Function(HOGDescriptor, VecF32)>();

  ffi.Pointer<CvStatus> HOGDescriptor_SetSVMDetector_Async(
    HOGDescriptor self,
    VecF32 det,
    imp1.CvCallback_0 callback,
  ) {
    return _HOGDescriptor_SetSVMDetector_Async(
      self,
      det,
      callback,
    );
  }

  late final _HOGDescriptor_SetSVMDetector_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(HOGDescriptor, VecF32,
              imp1.CvCallback_0)>>('HOGDescriptor_SetSVMDetector_Async');
  late final _HOGDescriptor_SetSVMDetector_Async =
      _HOGDescriptor_SetSVMDetector_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              HOGDescriptor, VecF32, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> HOGDescriptor_computeGradient(
    HOGDescriptor self,
    Mat img,
    Mat grad,
    Mat angleOfs,
    CvSize paddingTL,
    CvSize paddingBR,
  ) {
    return _HOGDescriptor_computeGradient(
      self,
      img,
      grad,
      angleOfs,
      paddingTL,
      paddingBR,
    );
  }

  late final _HOGDescriptor_computeGradientPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(HOGDescriptor, Mat, Mat, Mat, CvSize,
              CvSize)>>('HOGDescriptor_computeGradient');
  late final _HOGDescriptor_computeGradient =
      _HOGDescriptor_computeGradientPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              HOGDescriptor, Mat, Mat, Mat, CvSize, CvSize)>();

  ffi.Pointer<CvStatus> HOGDescriptor_computeGradient_Async(
    HOGDescriptor self,
    Mat img,
    Mat grad,
    Mat angleOfs,
    CvSize paddingTL,
    CvSize paddingBR,
    imp1.CvCallback_0 callback,
  ) {
    return _HOGDescriptor_computeGradient_Async(
      self,
      img,
      grad,
      angleOfs,
      paddingTL,
      paddingBR,
      callback,
    );
  }

  late final _HOGDescriptor_computeGradient_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              HOGDescriptor,
              Mat,
              Mat,
              Mat,
              CvSize,
              CvSize,
              imp1.CvCallback_0)>>('HOGDescriptor_computeGradient_Async');
  late final _HOGDescriptor_computeGradient_Async =
      _HOGDescriptor_computeGradient_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(HOGDescriptor, Mat, Mat, Mat, CvSize,
              CvSize, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> HOGDescriptor_getDaimlerPeopleDetector(
    ffi.Pointer<VecF32> rval,
  ) {
    return _HOGDescriptor_getDaimlerPeopleDetector(
      rval,
    );
  }

  late final _HOGDescriptor_getDaimlerPeopleDetectorPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<CvStatus> Function(ffi.Pointer<VecF32>)>>(
      'HOGDescriptor_getDaimlerPeopleDetector');
  late final _HOGDescriptor_getDaimlerPeopleDetector =
      _HOGDescriptor_getDaimlerPeopleDetectorPtr.asFunction<
          ffi.Pointer<CvStatus> Function(ffi.Pointer<VecF32>)>();
